generator/generated/ExpressionOnlyParser.py
# Generated from ExpressionOnly.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExpressionOnlyParser ( Parser ):

    grammarFileName = "ExpressionOnly.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'is'", "'null'", "'not'", "'*'", "'/'", 
                     "'%'", "'and'", "'+'", "'-'", "'or'", "'>'", "'<'", 
                     "'>='", "'<='", "'!='", "'<>'", "'['", "']'", "'('", 
                     "')'", "'case'", "'end'", "'when'", "'then'", "'else'", 
                     "','", "'.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "CONSTANTS", "TYPES", "STRING_LIT", "BOOL_LIT", "ID", 
                      "FLOAT", "DEC", "HEX", "BIN", "WS", "LINE_COMMENT" ]

    RULE_expr = 0
    RULE_case_expr = 1
    RULE_when_then = 2
    RULE_else_then = 3
    RULE_unary_expr = 4
    RULE_expr_list = 5
    RULE_function = 6
    RULE_dot_member = 7
    RULE_number = 8
    RULE_str = 9
    RULE_bool = 10
    RULE_func_name = 11
    RULE_col_name = 12

    ruleNames =  [ "expr", "case_expr", "when_then", "else_then", "unary_expr", 
                   "expr_list", "function", "dot_member", "number", "str", 
                   "bool", "func_name", "col_name" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    CONSTANTS=28
    TYPES=29
    STRING_LIT=30
    BOOL_LIT=31
    ID=32
    FLOAT=33
    DEC=34
    HEX=35
    BIN=36
    WS=37
    LINE_COMMENT=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unary_expr(self):
            return self.getTypedRuleContext(ExpressionOnlyParser.Unary_exprContext,0)


        def case_expr(self):
            return self.getTypedRuleContext(ExpressionOnlyParser.Case_exprContext,0)


        def function(self):
            return self.getTypedRuleContext(ExpressionOnlyParser.FunctionContext,0)


        def dot_member(self):
            return self.getTypedRuleContext(ExpressionOnlyParser.Dot_memberContext,0)


        def number(self):
            return self.getTypedRuleContext(ExpressionOnlyParser.NumberContext,0)


        def str_(self):
            return self.getTypedRuleContext(ExpressionOnlyParser.StrContext,0)


        def bool_(self):
            return self.getTypedRuleContext(ExpressionOnlyParser.BoolContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpressionOnlyParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExpressionOnlyParser.ExprContext,i)


        def getRuleIndex(self):
            return ExpressionOnlyParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ExpressionOnlyParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 0
        self.enterRecursionRule(localctx, 0, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 27
                self.unary_expr()
                pass

            elif la_ == 2:
                self.state = 28
                self.case_expr()
                pass

            elif la_ == 3:
                self.state = 29
                self.function()
                pass

            elif la_ == 4:
                self.state = 30
                self.dot_member()
                pass

            elif la_ == 5:
                self.state = 31
                self.number()
                pass

            elif la_ == 6:
                self.state = 32
                self.str_()
                pass

            elif la_ == 7:
                self.state = 33
                self.bool_()
                pass

            elif la_ == 8:
                self.state = 34
                self.match(ExpressionOnlyParser.T__18)
                self.state = 35
                self.expr(0)
                self.state = 36
                self.match(ExpressionOnlyParser.T__19)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 63
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 61
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        localctx = ExpressionOnlyParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 40
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 41
                        _la = self._input.LA(1)
                        if not(((_la) & ~0x3f) == 0 and ((1 << _la) & 240) != 0):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 42
                        self.expr(12)
                        pass

                    elif la_ == 2:
                        localctx = ExpressionOnlyParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 43
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 44
                        _la = self._input.LA(1)
                        if not(((_la) & ~0x3f) == 0 and ((1 << _la) & 1792) != 0):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 45
                        self.expr(11)
                        pass

                    elif la_ == 3:
                        localctx = ExpressionOnlyParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 46
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 47
                        _la = self._input.LA(1)
                        if not(((_la) & ~0x3f) == 0 and ((1 << _la) & 129024) != 0):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 48
                        self.expr(10)
                        pass

                    elif la_ == 4:
                        localctx = ExpressionOnlyParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 49
                        if not self.precpred(self._ctx, 13):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 13)")
                        self.state = 50
                        self.match(ExpressionOnlyParser.T__0)
                        self.state = 51
                        self.match(ExpressionOnlyParser.T__1)
                        pass

                    elif la_ == 5:
                        localctx = ExpressionOnlyParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 52
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 53
                        self.match(ExpressionOnlyParser.T__0)
                        self.state = 54
                        self.match(ExpressionOnlyParser.T__2)
                        self.state = 55
                        self.match(ExpressionOnlyParser.T__1)
                        pass

                    elif la_ == 6:
                        localctx = ExpressionOnlyParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 56
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 57
                        self.match(ExpressionOnlyParser.T__16)
                        self.state = 58
                        self.expr(0)
                        self.state = 59
                        self.match(ExpressionOnlyParser.T__17)
                        pass

             
                self.state = 65
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Case_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def when_then(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpressionOnlyParser.When_thenContext)
            else:
                return self.getTypedRuleContext(ExpressionOnlyParser.When_thenContext,i)


        def else_then(self):
            return self.getTypedRuleContext(ExpressionOnlyParser.Else_thenContext,0)


        def getRuleIndex(self):
            return ExpressionOnlyParser.RULE_case_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCase_expr" ):
                listener.enterCase_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCase_expr" ):
                listener.exitCase_expr(self)




    def case_expr(self):

        localctx = ExpressionOnlyParser.Case_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_case_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(ExpressionOnlyParser.T__20)
            self.state = 67
            self.when_then()
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==23:
                self.state = 68
                self.when_then()
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 74
            self.else_then()
            self.state = 75
            self.match(ExpressionOnlyParser.T__21)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class When_thenContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpressionOnlyParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExpressionOnlyParser.ExprContext,i)


        def getRuleIndex(self):
            return ExpressionOnlyParser.RULE_when_then

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhen_then" ):
                listener.enterWhen_then(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhen_then" ):
                listener.exitWhen_then(self)




    def when_then(self):

        localctx = ExpressionOnlyParser.When_thenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_when_then)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(ExpressionOnlyParser.T__22)
            self.state = 78
            self.expr(0)
            self.state = 79
            self.match(ExpressionOnlyParser.T__23)
            self.state = 80
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Else_thenContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(ExpressionOnlyParser.ExprContext,0)


        def getRuleIndex(self):
            return ExpressionOnlyParser.RULE_else_then

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElse_then" ):
                listener.enterElse_then(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElse_then" ):
                listener.exitElse_then(self)




    def else_then(self):

        localctx = ExpressionOnlyParser.Else_thenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_else_then)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(ExpressionOnlyParser.T__24)
            self.state = 83
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Unary_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(ExpressionOnlyParser.ExprContext,0)


        def getRuleIndex(self):
            return ExpressionOnlyParser.RULE_unary_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnary_expr" ):
                listener.enterUnary_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnary_expr" ):
                listener.exitUnary_expr(self)




    def unary_expr(self):

        localctx = ExpressionOnlyParser.Unary_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_unary_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            _la = self._input.LA(1)
            if not(((_la) & ~0x3f) == 0 and ((1 << _la) & 776) != 0):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 86
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpressionOnlyParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExpressionOnlyParser.ExprContext,i)


        def getRuleIndex(self):
            return ExpressionOnlyParser.RULE_expr_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_list" ):
                listener.enterExpr_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_list" ):
                listener.exitExpr_list(self)




    def expr_list(self):

        localctx = ExpressionOnlyParser.Expr_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_expr_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.expr(0)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==26:
                self.state = 89
                self.match(ExpressionOnlyParser.T__25)
                self.state = 90
                self.expr(0)
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_name(self):
            return self.getTypedRuleContext(ExpressionOnlyParser.Func_nameContext,0)


        def expr_list(self):
            return self.getTypedRuleContext(ExpressionOnlyParser.Expr_listContext,0)


        def getRuleIndex(self):
            return ExpressionOnlyParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)




    def function(self):

        localctx = ExpressionOnlyParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.func_name()
            self.state = 97
            self.match(ExpressionOnlyParser.T__18)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3f) == 0 and ((1 << _la) & 136636269320) != 0:
                self.state = 98
                self.expr_list()


            self.state = 101
            self.match(ExpressionOnlyParser.T__19)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Dot_memberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def col_name(self):
            return self.getTypedRuleContext(ExpressionOnlyParser.Col_nameContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ExpressionOnlyParser.ID)
            else:
                return self.getToken(ExpressionOnlyParser.ID, i)

        def getRuleIndex(self):
            return ExpressionOnlyParser.RULE_dot_member

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDot_member" ):
                listener.enterDot_member(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDot_member" ):
                listener.exitDot_member(self)




    def dot_member(self):

        localctx = ExpressionOnlyParser.Dot_memberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_dot_member)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.col_name()
            self.state = 108
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 104
                    self.match(ExpressionOnlyParser.T__26)
                    self.state = 105
                    self.match(ExpressionOnlyParser.ID) 
                self.state = 110
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT(self):
            return self.getToken(ExpressionOnlyParser.FLOAT, 0)

        def DEC(self):
            return self.getToken(ExpressionOnlyParser.DEC, 0)

        def HEX(self):
            return self.getToken(ExpressionOnlyParser.HEX, 0)

        def BIN(self):
            return self.getToken(ExpressionOnlyParser.BIN, 0)

        def CONSTANTS(self):
            return self.getToken(ExpressionOnlyParser.CONSTANTS, 0)

        def getRuleIndex(self):
            return ExpressionOnlyParser.RULE_number

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumber" ):
                listener.enterNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumber" ):
                listener.exitNumber(self)




    def number(self):

        localctx = ExpressionOnlyParser.NumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_number)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            _la = self._input.LA(1)
            if not(((_la) & ~0x3f) == 0 and ((1 << _la) & 129117454336) != 0):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING_LIT(self):
            return self.getToken(ExpressionOnlyParser.STRING_LIT, 0)

        def getRuleIndex(self):
            return ExpressionOnlyParser.RULE_str

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStr" ):
                listener.enterStr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStr" ):
                listener.exitStr(self)




    def str_(self):

        localctx = ExpressionOnlyParser.StrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_str)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(ExpressionOnlyParser.STRING_LIT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOL_LIT(self):
            return self.getToken(ExpressionOnlyParser.BOOL_LIT, 0)

        def getRuleIndex(self):
            return ExpressionOnlyParser.RULE_bool

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBool" ):
                listener.enterBool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBool" ):
                listener.exitBool(self)




    def bool_(self):

        localctx = ExpressionOnlyParser.BoolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_bool)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(ExpressionOnlyParser.BOOL_LIT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExpressionOnlyParser.ID, 0)

        def getRuleIndex(self):
            return ExpressionOnlyParser.RULE_func_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_name" ):
                listener.enterFunc_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_name" ):
                listener.exitFunc_name(self)




    def func_name(self):

        localctx = ExpressionOnlyParser.Func_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_func_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(ExpressionOnlyParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Col_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExpressionOnlyParser.ID, 0)

        def getRuleIndex(self):
            return ExpressionOnlyParser.RULE_col_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCol_name" ):
                listener.enterCol_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCol_name" ):
                listener.exitCol_name(self)




    def col_name(self):

        localctx = ExpressionOnlyParser.Col_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_col_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(ExpressionOnlyParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[0] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 11)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 10)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 9)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 13)
         

            if predIndex == 4:
                return self.precpred(self._ctx, 12)
         

            if predIndex == 5:
                return self.precpred(self._ctx, 8)
         




